--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script>
         // You can also require other files to run in this process
         require('./scripts/renderer.js')
-        require('./scripts/renderer2.js')
+        //require('./scripts/renderer2.js')
     </script>
 </body>
 
